# legacy-sipXlang-cs

./: Makefile.am  configure.ac  sipxlang-cs.spec.in
sipxpbx/: sipxplugin.beans.xml
