AC_PREREQ(2.57)
AC_INIT(sipxlang-cs, 0.0.4.5.2, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([sipxpbx/sipxplugin.beans.xml])
AM_INIT_AUTOMAKE(foreign tar-ustar) 
m4_include([config/sipXlib2.m4])
AC_SUBST(LANG_ID, cs)
AC_CONFIG_FILES([
  Makefile
  sipxlang-cs.spec
])
AC_OUTPUT
